compiler/toc-hir-lowering/tests/snapshots/lowering__lower_array_types_any_sized-7.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "type _ : proc uwu(_ : array char, 1 .. *, char of int)"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..54): "<root>"@(dummy)
      StmtBody@(src/main.t:0..54): []
        StmtItem@(src/main.t:0..54): ItemId(0)
          Type@(src/main.t:0..54): "_"@(src/main.t:5..6)
            Procedure@(src/main.t:9..54): [...]
              Array@(src/main.t:22..53): Static
                Constrained@(src/main.t:34..40): end => Any
                  ExprBody@(src/main.t:34..35)
                    Literal@(src/main.t:34..35): Integer(1)
                Primitive@(src/main.t:50..53): Int
              Void@(src/main.t:9..54)
error at src/main.t:34..40: extra ranges specified
| error for src/main.t:28..32: extra ranges before
| error for src/main.t:42..46: extra ranges after
| note for src/main.t:34..40: this must be the only range present
| info: any-sized arrays must have this range be the only range present
