compiler/toc-hir-lowering/tests/snapshots/lowering__lower_array_types_any_sized.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "type _ : proc uwu(_ : array 1 .. * of int)"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..42): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..42): []
        StmtItem@(FileId(1), 0..42): ItemId(0)
          Type@(FileId(1), 0..42): "_"@(FileId(1), 5..6)
            Procedure@(FileId(1), 9..42): [...]
              Array@(FileId(1), 22..41): Static
                Constrained@(FileId(1), 28..34): end => Any
                  ExprBody@(FileId(1), 28..29)
                    Literal@(FileId(1), 28..29): Integer(1)
                Primitive@(FileId(1), 38..41): Int
              Void@(FileId(1), 9..42)

