compiler/toc-hir-lowering/tests/snapshots/lowering__lower_array_types_init_sized-3.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : array 1 .. *, char of int := init(1)"
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..44): "<root>"@(dummy)
      StmtBody@(src/main.t:0..44): []
        StmtItem@(src/main.t:0..44): ItemId(0)
          ConstVar@(src/main.t:0..44): var "_"@(src/main.t:4..5)
            Array@(src/main.t:8..33): MaybeDyn
              Constrained@(src/main.t:14..20): end => Unsized(Some(1))
                ExprBody@(src/main.t:14..15)
                  Literal@(src/main.t:14..15): Integer(1)
              Primitive@(src/main.t:30..33): Int
            ExprBody@(src/main.t:37..44)
              InitExpr@(src/main.t:37..44)
                ExprBody@(src/main.t:42..43)
                  Literal@(src/main.t:42..43): Integer(1)
error at src/main.t:14..20: extra ranges specified
| error for src/main.t:22..26: extra ranges after
| note for src/main.t:14..20: this must be the only range present
| info: `init`-sized arrays must have this range be the only range present
