compiler/toc-hir-lowering/tests/snapshots/lowering__lower_array_types_init_sized-5.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 61
expression: "var _ : array char, 1 .. * of int := init(1)"

---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..44): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..44): []
        StmtItem@(FileId(1), 0..44): ItemId(0)
          ConstVar@(FileId(1), 0..44): var "_"@(FileId(1), 4..5)
            Array@(FileId(1), 8..33): MaybeDyn
              Constrained@(FileId(1), 20..26): end => Unsized(Some(1))
                ExprBody@(FileId(1), 20..21)
                  Literal@(FileId(1), 20..21): Integer(1)
              Primitive@(FileId(1), 30..33): Int
            ExprBody@(FileId(1), 37..44)
              InitExpr@(FileId(1), 37..44)
                ExprBody@(FileId(1), 42..43)
                  Literal@(FileId(1), 42..43): Integer(1)
error in file FileId(1) at 20..26: extra ranges specified
| error in file FileId(1) for 14..18: extra ranges before
| note in file FileId(1) for 20..26: this must be the only range present
| info: `init`-sized arrays must have this range be the only range present

