compiler/toc-hir-lowering/tests/snapshots/lowering__lower_array_types_init_sized-7.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "var _ : array char, 1 .. *, char of int := init(1)"
---
Package@(dummy)
  Root@(dummy): FileId(1) -> ItemId(1)
    Module@(FileId(1), 0..50): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..50): []
        StmtItem@(FileId(1), 0..50): ItemId(0)
          ConstVar@(FileId(1), 0..50): var "_"@(FileId(1), 4..5)
            Array@(FileId(1), 8..39): MaybeDyn
              Constrained@(FileId(1), 20..26): end => Unsized(Some(1))
                ExprBody@(FileId(1), 20..21)
                  Literal@(FileId(1), 20..21): Integer(1)
              Primitive@(FileId(1), 36..39): Int
            ExprBody@(FileId(1), 43..50)
              InitExpr@(FileId(1), 43..50)
                ExprBody@(FileId(1), 48..49)
                  Literal@(FileId(1), 48..49): Integer(1)
error at (FileId(1), 20..26): extra ranges specified
| error for (FileId(1), 14..18): extra ranges before
| error for (FileId(1), 28..32): extra ranges after
| note for (FileId(1), 20..26): this must be the only range present
| info: `init`-sized arrays must have this range be the only range present

