compiler/toc-hir-lowering/tests/snapshots/lowering__lower_binary_expr-3.snap
---
source: compiler/toc-hir-lowering/tests/lowering.rs
expression: "const a := 1 not 1 "
---
Package@(dummy)
  Root@(dummy): src/main.t -> ItemId(1)
    Module@(src/main.t:0..19): "<root>"@(dummy)
      StmtBody@(src/main.t:0..18): []
        StmtItem@(src/main.t:0..18): ItemId(0)
          ConstVar@(src/main.t:0..18): const "a"@(src/main.t:6..7)
            ExprBody@(src/main.t:11..18)
error at src/main.t:17..18: unexpected token
| error for src/main.t:17..18: expected `in` or `=`, but found int literal
